fixed spacing in deck construction page

--- a/react-vite/src/components/DeckComponents/DeckDetailsPage/DeckDetailsPage.css
+++ b/react-vite/src/components/DeckComponents/DeckDetailsPage/DeckDetailsPage.css
@@ -62,7 +62,7 @@
 }
 
 .deck-details-deck-stats-div {
-  height: 50vh;
+  height: 500px;
   width: 100%;
   margin: 0 0 0 2vh;
   /* border: 1px solid white; */
